# WinFontInstall

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yaml
src/: CMakeLists.txt  ReadFontName.c  ReadFontName.h  ReadFontNameInternal.h  TestFontRead.c  TestFontRead.mak  WinFontInstall.admin.manifest  WinFontInstall.c  WinFontInstall.mak  WinFontInstall.manifest  WinFontInstall.rc  version.h
src/libs/: GetArgv.c  GetArgv.h  SimpleString.c  SimpleString.h  StringIntrinsics.h  SwapIntrinsics.h
